base/service/nginx_ingress/https/ingress-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-3
  template:
    metadata:
      labels:
        app: nginx-3
    spec:
      containers:
        - name: nginx
          image: leifeng.harbor.com/library/myapp:v3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-3
  namespace: default
spec:
  selector:
    app: nginx-3
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-3
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www3.fusco.com
      secretName: tls-secret
  rules:
    - host: www3.fusco.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: nginx-service-3
                port: 
                  number: 80
status:
  loadBalancer:
    ingress:
    - ip: 10.98.228.20
